force-app/main/default/objects/Contact/fields/Total_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursement__c</fullName>
    <formula>( Fixed_Amount__c  +  Variable__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>