force-app/main/default/objects/Contact/fields/Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date__c</fullName>
    <label>Trip Date</label>
    <type>DateTime</type>
</CustomField>