force-app/main/default/objects/Contact/fields/Triplog_Status__c.field-meta.xml
<CustomField>
    <fullName>Triplog_Status__c</fullName>
    <inlineHelpText>U - Not submitted 
S - Submitted 
A - Approved 
R - Rejected 
P - Pay scheduled</inlineHelpText>
    <label>Triplog Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
                <default>true</default>
                <label>U</label>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>