force-app/main/default/objects/Contact/fields/Triplog_UserID__c.field-meta.xml
<CustomField>
    <fullName>Triplog_UserID__c</fullName>
    <label>Triplog UserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>