force-app/main/default/objects/Contact/fields/Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Variable_Rate__c</fullName>
    <formula>( Fuel_Rate__c +  Maintenance_and_Tires__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>