force-app/main/default/objects/Contact/fields/Vehicle2Odometer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle2Odometer__c</fullName>
    <label>Vehicle 2 Odometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>