force-app/main/default/objects/Contact/fields/Vehicle_2_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_2_Odometer__c</fullName>
    <label>Vehicle 2 Odometer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>