force-app/main/default/objects/Contact/fields/Vehicle_Age__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Age__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Age</label>
    <type>Checkbox</type>
</CustomField>