force-app/main/default/objects/Contact/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <description>Format should be like this: Year Vehicle Name 
Ex. 2019 Ford Sedan</description>
    <inlineHelpText>Format should be like this: Year Vehicle Name 
Ex. 2019 Ford Sedan</inlineHelpText>
    <label>Standard Vehicle Make Model and Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>