force-app/main/default/objects/Contact/fields/Vehicle_Value_Check__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Value_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Value Check</label>
    <type>Checkbox</type>
</CustomField>