force-app/main/default/objects/Contact/fields/X15Jan__c.field-meta.xml
<CustomField>
    <fullName>X15Jan__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,15)</defaultValue>
    <label>15Jan</label>
    <type>Date</type>
</CustomField>