force-app/main/default/objects/Contact/fields/X15July2__c.field-meta.xml
<CustomField>
    <fullName>X15July2__c</fullName>
    <label>15July2</label>
    <type>Date</type>
</CustomField>