force-app/main/default/objects/Contact/fields/X15July__c.field-meta.xml
<CustomField>
    <fullName>X15July__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),7,15)</defaultValue>
    <label>15July</label>
    <type>Date</type>
</CustomField>