force-app/main/default/objects/Contact/fields/X2017_Imputed_Income__c.field-meta.xml
<CustomField>
    <fullName>X2017_Imputed_Income__c</fullName>
    <label>2017 Imputed Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>