force-app/main/default/objects/Contact/fields/X2017_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>X2017_Reimbursement__c</fullName>
    <label>2017 Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>