force-app/main/default/objects/Contact/fields/Yearly_Total_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Total_Reimbursement__c</fullName>
    <label>Yearly Total Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>