force-app/main/default/objects/Contact/validationRules/MailingState_for_length.validationRule-meta.xml
<ValidationRule>
    <fullName>MailingState_for_length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(MailingState) &gt; 2</errorConditionFormula>
    <errorDisplayField>MailingState</errorDisplayField>
    <errorMessage>Please Enter Only 2 Characters</errorMessage>
</ValidationRule>