force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>External_Email__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Monthly_Mileage_Limit__c</columns>
    <columns>Role__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>